# vector-parallel

./: .gitignore  LICENSE  Test.hs  vector-parallel.cabal
Data/Vector/: Parallel.hs
Data/Vector/Generic/: Parallel.hs
Data/Vector/Internal/: Gang.hs
Data/Vector/Unboxed/: Parallel.hs
