Name:                   vector-parallel
Version:                0.1
Synopsis:               Parallel evaluation for vectors
Description:            Parallel evaluation for vectors
License:                BSD3
License-file:           LICENSE
Author:                 Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
Maintainer:             Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
Category:               Control
Build-type:             Simple
Cabal-version:          >= 1.6

Flag test
  Description:          build a performance/test program
  Default:              False

Library
  Exposed-modules:      Data.Vector.Parallel
                        Data.Vector.Unboxed.Parallel
                        Data.Vector.Generic.Parallel

  Build-depends:        base            >= 3.0 && < 5.0,
                        monad-par       >= 0.1 && < 0.2,
                        pretty          >= 1.0 && < 1.2,
                        vector          >= 0.7 && < 0.10

  ghc-options:          -O2 -Wall -fno-warn-orphans
  ghc-prof-options:     -auto-all -caf-all


Executable vector-parallel-test
  main-is:              Test.hs
  other-modules:        Data.Vector.Parallel
                        Data.Vector.Unboxed.Parallel
                        Data.Vector.Generic.Parallel

  if flag(test)
    build-depends:      base            >= 3.0 && < 5.0,
                        criterion,
                        deepseq,
                        mwc-random,
                        QuickCheck
  else
    buildable:          False

  ghc-options:          -threaded
                        -eventlog
                        -O2
                        -fllvm
                        -optlo-O3
                        -Wall

  if impl(ghc >= 7.0)
    ghc-options:        -rtsopts

  ghc-prof-options:     -auto-all -caf-all


source-repository head
  type:                 git
  location:             https://github.com/tmcdonell/vector-parallel

